GNU coreutils NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  cut could segfault when invoked with a user-specified output
  delimiter and an unbounded range like "-f1234567890-".
  [bug introduced in coreutils-5.3.0]

  du would infloop when given --files0-from=DIR
  [bug introduced in coreutils-7.1]

  sort no longer spawns 7 worker threads to sort 16 lines
  [bug introduced in coreutils-8.6]

  touch built on Solaris 9 would segfault when run on Solaris 10
  [bug introduced in coreutils-8.8]

  wc would dereference a NULL pointer upon an early out-of-memory error
  [bug introduced in coreutils-7.1]

** New features

  dd now accepts the 'nocache' flag to the iflag and oflag options,
  which will discard any cache associated with the files, or
  processed portion thereof.

** Changes in behavior

  cp now avoids syncing files when possible, when doing a FIEMAP copy.
  The sync in only needed on Linux kernels before 2.6.38.
  [The sync was introduced in coreutils-8.10]

  df now aligns columns consistently, and no longer wraps entries
  with longer device identifiers, over two lines.

  test now accepts "==" as a synonym for "="


* Noteworthy changes in release 8.10 (2011-02-04) [stable]

** Bug fixes

  du would abort with a failed assertion when two conditions are met:
  part of the hierarchy being traversed is moved to a higher level in the
  directory tree, and there is at least one more command line directory
  argument following the one containing the moved sub-tree.
  [bug introduced in coreutils-5.1.0]

  join --header now skips the ordering check for the first line
  even if the other file is empty.  [bug introduced in coreutils-8.5]

  rm -f no longer fails for EINVAL or EILSEQ on file systems that
  reject file names invalid for that file system.

  uniq -f NUM no longer tries to process fields after end of line.
  [bug introduced in coreutils-7.0]

** New features
